fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.markdown-body ul {
+  list-style: unset;
+}
